--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,10 @@ h1 {
     -webkit-margin-end: 0px;
     font-weight: bold;
 }
-
+.navbar {
+    float: right;
+    padding: 0;
+}
 
 nav, section {
     display: block;
