--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ header {
     background-color: #06D6A0;
     padding: 20px;
     text-align: center;
+    overflow: hidden;
+    height: 60px;
+    padding: 0 20px;
 }
 
 article, aside, footer, header, hgroup, main, nav, section {
@@ -58,6 +61,7 @@ h1 {
 .navbar {
     float: right;
     padding: 0;
+    min-width: 550px;
 }
 
 nav, section {
@@ -141,6 +145,13 @@ h3 {
 
 .team {
     overflow: hidden;
+}
+
+
+.logo {
+    float: left;
+    line-height: 60px;
+    font-size: 18px;
 }
 
 .team-fun, .team-values, .team-meow {
