--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,17 @@ img {
 .product-item > img {
     border: 3px solid black;
 }
+
+.product-item {
+    float: left;
+    width: 33%;
+    padding: 10px;
+}
+
+.product-wrapper {
+    overflow: hidden;
+}
+
 .hero {
   overflow: hidden;
 background-color: #26547C;
